--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.42.1"
   },
-  "browserslist": ["defaults"]
+  "browserslist": [
+    "defaults"
+  ],
+  "dependencies": {
+    "npm": "^8.3.0"
+  }
 }
